--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "Muhammad",
   "license": "MIT",
   "devDependencies": {
-    "hardhat": "^2.12.7",
-    "@openzeppelin/contracts": "^4.8.1"
+    "@openzeppelin/contracts": "^4.8.1",
+    "hardhat": "^2.12.7"
   },
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
-    "@openzeppelin/contracts": "^4.8.1"
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
+    "@openzeppelin/contracts": "^4.8.1",
+    "dotenv": "^16.0.3"
   }
 }
