--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "hardhat": "^2.12.7"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.7",
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@openzeppelin/contracts": "^4.8.1",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "web3": "^1.8.2"
   }
 }
